<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProVersion">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="25dp"
                android:gravity="center"
                android:text="@string/free_version"
                android:textSize="35sp"
                android:textColor="@color/colorPrimary"/>

            <Button
                android:id="@+id/btn_pro_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="35dp"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/edittext_custom"
                android:text="@string/download_pro_version"
                android:textColor="@color/colorPrimary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:background="@drawable/edittext_custom">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:text="@string/pro_number_one"/>

                <Button
                    android:id="@+id/btn_export_db"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="35dp"
                    android:background="@drawable/edittext_custom"
                    android:text="@string/export_db"
                    android:textColor="@color/colorPrimary"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:background="@drawable/edittext_custom">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:text="@string/pro_number_two"/>

                <Button
                    android:id="@+id/btn_import_db"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="35dp"
                    android:background="@drawable/edittext_custom"
                    android:text="@string/import_db"
                    android:textColor="@color/colorPrimary"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>